--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ body::-webkit-scrollbar {
             <tr>
                 <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
 			 <h2 style="color:#dfd2c3;">Hi! I am Christelle, a Web Developer & Designer.</h2></br>
-                    <h1 class="big_header" ><span>I build beautiful <i>user-centered</i> interfaces.</span></h1>
+                    <h1 class="big_header" ><span>I build better <i>user-centered</i> interfaces.</span></h1>
                    <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" >Book a call ➜</button></a><br>
                     
                 </td>
@@ -217,7 +217,7 @@ body::-webkit-scrollbar {
     <div id="work">
         <h2 style="text-transform:uppercase;">latest work</h2>
         <div id="photos">
-		 <figure> <a href="https://wpadvisors.ch/"><img onclick="magnify($(this).attr('src'))" src="images/wpa.png" alt="Wordpress WPA Website" ></a> <div> <a href="https://wpadvisors.ch/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div>
+		 <figure> <a href="https://wpadvisors.ch/"><img onclick="magnify($(this).attr('src'))" src="images/wpa.png" alt="Wordpress WPA Website" ></a> <div style="text-align:center;"> <a href="https://wpadvisors.ch/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div>
 </figure>
             <figure> <a href="https://protecevents.com/"><img onclick="magnify($(this).attr('src'))" src="images/protec.png" alt="Wordpress Protec Website" ></a><div style="text-align:center;"> <a href="https://protecevents.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
 		<figure> <a href="https://ptstrading.net/"><img onclick="magnify($(this).attr('src'))" src="images/ptsf.png" alt="Wordpress PTSTrading Website" ></a><div  style="text-align:center;"><a href="https://ptstrading.net/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
@@ -242,7 +242,7 @@ body::-webkit-scrollbar {
 	   I work with companies, start-ups, and individuals from all corners of the globe to help them achieve their goals. 
      <center>
       <br><hr><marquee behavior="scroll" direction="left" scrollamount="10" class="marquee">
-       Web Management  -  UI/UX Design  -  Webflow  -  Wordpress - Shopify  - Joomla -  Search Engine Optimization - Google Analytics  - Google My Business - Google Sites - Email Automation - Website Audit - Website Optimization
+       Web Management  /  Wordpress / Shopify  / Joomla  /  UI/UX Design  /  Webflow  /  Search Engine Optimization  /  Google Analytics  /  Google My Business  /  Google Sites  /  Email Automation  /  Website Audit  / Website Optimization
    </marquee><hr><br><br> 
    <h2 style="text-transform:uppercase;color:#dfd2c3;text-align:center;    -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
