--- a/index.html
+++ b/index.html
@@ -128,6 +128,16 @@ body::-webkit-scrollbar {
         text-align: left;
         background-color: #18161b;
     }
+
+    .cta{
+      background-color:white;
+      margin:8em 0 8em;
+      display:flex;
+      flex-direction: row;
+      flex-flow: row wrap; 
+      width: 100%;
+      justify-content: space-around;
+    }
     
     @media only screen and (max-width: 600px) {
        .card-deck{
@@ -323,21 +333,21 @@ body::-webkit-scrollbar {
  <h2 style="text-transform:uppercase;color:#dfd2c3;">what clients say</h2>
  <div class="card-deck">
   <div class="card">
-    <img class="card-img-top" style="width:15%;" src="images/testi.png" alt="">
+    <img class="card-img-top" style="width:33.3%;" src="images/testi.png" alt="">
     <div class="card-body">
         <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">Hussein S.</h4>
         <p class="card-text">"Christelle managed to redesign and build my Shopify store with amazing speed and quality. She also demonstrated a very good initiative in proposing ideas and great attention to details. Throughout the project, Christelle communicated professionally and effectively, and I would definitely recommend working with her."</br>
     </div>
 </div>
 <div class="card">
-    <img class="card-img-top" style="width:15%;" src="images/testi.png" alt="">
+    <img class="card-img-top" style="width:33.3%;" src="images/testi.png" alt="">
     <div class="card-body">
         <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">Maya A.</h4>
         <p class="card-text">"I recently worked with Christelle on a website development from scratch and was impressed with her exceptional service and expertise. Christelle listened to my vision, offered creative ideas and made sure the final product exceeded my expectations. The new website is sleek, modern, and easy to navigate, optimized for search engines and mobile devices. She completed the project on time and was always responsive and accessible. I highly recommend Christelle for any website design and development."</p>
     </div>
 </div>
 <div class="card">
-    <img class="card-img-top" style="width:15%;" src="images/testi.png" alt="">
+    <img class="card-img-top" style="width:33.3%;" src="images/testi.png" alt="">
     <div class="card-body">
       <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">Kadi K.</h4>
       <p class="card-text">"Christelle did a great job in a web design project. She delivered on time all the agreed deliverables. She is very talented in UX/UI and improving websites. I recommend working with her."
@@ -350,7 +360,7 @@ body::-webkit-scrollbar {
 
 
 
-<div class="cta" style="margin:8em 0 8em;display:flex;flex-direction: row;flex-flow: row wrap;: ;width: 100%;justify-content: space-around;">
+<div class="cta">
   <div> 
     <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Have a project in mind? Let's work together! 💻 🚀    </h2>
   </div> 
@@ -360,6 +370,8 @@ body::-webkit-scrollbar {
 </div>
 
 </div>
+
+
 
 <div id="contact">
  <h2 style="text-transform:uppercase;">Contact</h2>
