--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 }
 </script>
 
-  <script>
+ <!-- <script>
     //for disabling right click use this as it is 
     document.addEventListener('contextmenu', event => event.preventDefault());
 </script>
-
+-->
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
