--- a/index.html
+++ b/index.html
@@ -235,20 +235,90 @@ body::-webkit-scrollbar {
     <div id="work">
         <h2 style="text-transform:uppercase;">latest work</h2>
         <div id="photos">
-     <figure> <a href="https://wpadvisors.ch/"><img onclick="magnify($(this).attr('src'))" src="images/wpa.png" alt="Wordpress WPA Website" ></a> <div style="text-align:center;"> <a href="https://wpadvisors.ch/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div>
+     <figure> <a href="https://wpadvisors.ch/">
+         <img onclick="magnify($(this).attr('src'))" src="images/wpa.png" alt="Wordpress WPA Website" ></a> 
+         <div style="text-align:center;"> 
+             <a href="https://wpadvisors.ch/"> 
+                 <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button>
+             </a>
+         </div>
 </figure>
-            <figure> <a href="https://protecevents.com/"><img onclick="magnify($(this).attr('src'))" src="images/protec.png" alt="Wordpress Protec Website" ></a><div style="text-align:center;"> <a href="https://protecevents.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
-    <figure> <a href="https://ptstrading.net/"><img onclick="magnify($(this).attr('src'))" src="images/ptsf.png" alt="Wordpress PTSTrading Website" ></a><div  style="text-align:center;"><a href="https://ptstrading.net/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
-            <figure>  <a href="https://www.behance.net/gallery/102435435/LMS"> <img onclick="magnify($(this).attr('src'))" src="images/lmssf.png" alt="Web Development Library Management System Project"></a> <div  style="text-align:center;"><button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></div></figure>
+            <figure> <a href="https://protecevents.com/">
+                <img onclick="magnify($(this).attr('src'))" src="images/protec.png" alt="Wordpress Protec Website" ></a>
+                <div style="text-align:center;"> 
+                    <a href="https://protecevents.com/"> 
+                        <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button>
+                    </a>
+                </div>
+            </figure>
+    <figure> 
+        <a href="https://ptstrading.net/">
+            <img onclick="magnify($(this).attr('src'))" src="images/ptsf.png" alt="Wordpress PTSTrading Website" ></a>
+        <div  style="text-align:center;">
+            <a href="https://ptstrading.net/"> 
+            <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button>
+            </a>
+        </div>
+            </figure>
+            
+            <figure>  
+                <a href="https://www.behance.net/gallery/102435435/LMS"> 
+                    <img onclick="magnify($(this).attr('src'))" src="images/lmssf.png" alt="Web Development Library Management System Project"></a> 
+                <div  style="text-align:center;"><button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button>
+                </div>
+            </figure>
             <!-- <figure>  <img onclick="magnify($(this).attr('src'))" src="images/musicc.png" alt="Music player UX project"></a></figure>-->
-            <figure>  <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant%20(1)f.png" alt="Wordpress LevantLink Website Cyprus"></a><div  style="text-align:center;"><a href="https://www.levantlink.cy/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
-     <figure> <a href="https://imadaboukhalil.com/the-authentic-you"><img onclick="magnify($(this).attr('src'))" src="images/imad.png" alt="The authentic you webinar landing page" ></a><div  style="text-align:center;"><a href="https://imadaboukhalil.com/the-authentic-you"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
-     <figure> <a href="https://heapapparel.com/"><img onclick="magnify($(this).attr('src'))" src="images/heap%20(1)f.png" alt="Shopify HEAP Apparel Website" ></a><div  style="text-align:center;"><a href="https://heapapparel.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
-     <figure>  <a href="https://thesteakhouse.webflow.io/"> <img onclick="magnify($(this).attr('src'))"src="images/steakf.png" alt="The Steakhouse Webflow Project"></a><div  style="text-align:center;"><a href="#"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
-     <figure> <a  href="https://www.behance.net/gallery/131154021/Movie-Tickets-Booking-App-UX-Case-Study"><img onclick="magnify($(this).attr('src'))" src="images/cine.png" alt="Movie Tickets Booking App-UX Project"></a><div style="text-align:center;"><a href="#"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
-     <figure>    <img onclick="magnify($(this).attr('src'))" src="images/googlesite-.png" alt="Google site design"><div style="text-align:center;"<a href="#"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
-     <figure>  <img onclick="magnify($(this).attr('src'))" src="images/ddf2.png" alt="DDF Project"> <div style="text-align:center;" <a href="http://dameauxdoigtsdefee.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure> 
-     <figure> <a href="https://pepesrestaurant.webflow.io/"><img onclick="magnify($(this).attr('src'))" src="images/pepesf.png" alt="Pepe's Restaurant Webflow Project"></a><div  style="text-align:center;"><a href="https://pepesrestaurant.webflow.io/"><button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
+            <figure>  
+                <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant%20(1)f.png" alt="Wordpress LevantLink Website Cyprus"></a>
+                <div  style="text-align:center;">
+                    <a href="https://www.levantlink.cy/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+                </div>
+            </figure>
+     <figure> 
+         <a href="https://imadaboukhalil.com/the-authentic-you"><img onclick="magnify($(this).attr('src'))" src="images/imad.png" alt="The authentic you webinar landing page" ></a><div  style="text-align:center;"><a href="https://imadaboukhalil.com/the-authentic-you"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
+     <figure> 
+         <a href="https://heapapparel.com/">
+             <img onclick="magnify($(this).attr('src'))" src="images/heap%20(1)f.png" alt="Shopify HEAP Apparel Website" ></a>
+         <div  style="text-align:center;"><a href="https://heapapparel.com/"> 
+             <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+         </div>
+            </figure>
+     <figure>  
+         <a href="https://thesteakhouse.webflow.io/"> 
+             <img onclick="magnify($(this).attr('src'))"src="images/steakf.png" alt="The Steakhouse Webflow Project"></a>
+         <div  style="text-align:center;"><a href="#"> 
+             <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+         </div>
+            </figure>
+     <figure> 
+         <a  href="https://www.behance.net/gallery/131154021/Movie-Tickets-Booking-App-UX-Case-Study">
+             <img onclick="magnify($(this).attr('src'))" src="images/cine.png" alt="Movie Tickets Booking App-UX Project"></a>
+         <div style="text-align:center;">
+             <a href="https://www.behance.net/gallery/131154021/Movie-Tickets-Booking-App-UX-Case-Study"> 
+                 <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW PROJECT ➜</button></a>
+         </div>
+            </figure>
+     <figure>    
+         <img onclick="magnify($(this).attr('src'))" src="images/googlesite-.png" alt="Google site design">
+         <div style="text-align:center;">
+             <a href="#"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+        </div>
+            </figure>
+     <figure>  
+         <img onclick="magnify($(this).attr('src'))" src="images/ddf2.png" alt="DDF Project"> 
+         <div style="text-align:center;">
+             <a href="http://dameauxdoigtsdefee.com/"> 
+         <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+         </div>
+            </figure> 
+     <figure> 
+         <a href="https://pepesrestaurant.webflow.io/">
+             <img onclick="magnify($(this).attr('src'))" src="images/pepesf.png" alt="Pepe's Restaurant Webflow Project"></a>
+         <div  style="text-align:center;">
+             <a href="https://pepesrestaurant.webflow.io/">
+                 <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+         </div>
+            </figure>
      <!--<a  href="https://behance.net/christellehddd"><img onclick="magnify($(this).attr('src'))" src="images/plus.png" class="img_plus" alt="plus button" ></a>-->
  </div>
 </div>
