--- a/index.html
+++ b/index.html
@@ -432,11 +432,12 @@ body::-webkit-scrollbar {
 
 <div class="cta">
   <div> 
-    <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Have a project in mind? Let's work together! 💻 🚀    </h2>
+      <span>Your website represents your business. </span><br>
+    <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Let me help you improve your web presence. 💻 🚀    </h2>
   </div> 
 
  <div> 
-  <a href="#contact"> <button class="pulse-grow-on-hover" style="color: #18161b; border: 1px solid #18161b;" > GET A QUOTE </button></a>
+  <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" style="color: #18161b; border: 1px solid #18161b;" > BOOK A CALL</button></a>
 </div>
 
 </div>
