--- a/index.html
+++ b/index.html
@@ -432,8 +432,8 @@ body::-webkit-scrollbar {
 
 <div class="cta">
   <div> 
-      <span>Your website represents your business. </span><br>
-    <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Let me help you improve your web presence. 💻 🚀    </h2>
+   
+    <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Your website represents your business. Let me help you improve it. 💻 🚀    </h2>
   </div> 
 
  <div> 
