--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ body::-webkit-scrollbar {
             <tr>
                 <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
        <h2 style="color:#dfd2c3;">Hi! I am Christelle, a Web Developer & Designer.</h2></br>
-                    <h1 class="big_header" ><span>I build better <i>user-centered</i> interfaces.</span></h1>
+                    <h1 class="big_header" ><span>I build websites that help businesses <i>grow</i>.</span></h1>
                    <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" >Book a call ➜</button></a><br>
                     
                 </td>
@@ -329,11 +329,13 @@ body::-webkit-scrollbar {
    <h2 style="text-transform:uppercase;color:#dfd2c3;">about</h2>
    <p>
      My name is Christelle Haddad, I am a web developer with a passion for UI/UX Design and SEO. 
-     I build beautiful user-centered interfaces for brands and people who want to grow their digital presence, make a statement and stand out. As a freelancer, 
-     I work with companies, start-ups, and individuals from all corners of the globe to help them achieve their goals. 
+       I help businesses reach their goals by building websites that engage and convert visitors into customers. 
+       With my skills and experience in website design and development, I create beautiful user-centered interfaces for brands and individuals who want to 
+       make a strong web presence and achieve their goals. 
+       As a freelancer, I work with companies, start-ups, and individuals worldwide.
      <center>
       <br><hr><marquee behavior="scroll" direction="left" scrollamount="10" class="marquee">
-       Web Management  /  Wordpress / Shopify  / Joomla  /  UI/UX Design  /  Webflow  /  Search Engine Optimization  /  Google Analytics  /  Google My Business  /  Google Sites  /  Email Automation  /  Website Audit  / Website Optimization
+        Wordpress / Shopify  / Joomla  /  UI/UX Design  /  Webflow  /  Search Engine Optimization  /  Google Analytics  /  Google My Business  /  Google Sites  /  Email Automation  /   Web Management  /  Website Audit  / Website Optimization
    </marquee><hr><br><br> 
    <h2 style="text-transform:uppercase;color:#dfd2c3;text-align:center;    -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
