--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ body::-webkit-scrollbar {
 <!-- HTML Meta Tags -->
 <title>Freelance Web Developer | Christelle Haddad</title>
 <meta name="description" content="Christelle is a design-minded web developer focused on building beautiful user-centered interfaces & experiences. Let's elevate your business! 🚀 ">
-<link rel="author" href="https://www.linkedin.com/in/christellehaddad/" /><meta name="author" content="Freelance webd eveloper Christelle Haddad" />
+<link rel="author" href="https://www.linkedin.com/in/christellehaddad/" /><meta name="author" content="Freelance web developer Christelle Haddad" />
 <meta name="keywords" content="freelance web designer, seo, developer, joomla developer, shopify developer, wordpress developer, freelance web designer portfolio, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
 <link rel="icon" href="images/favicon.icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -328,7 +328,7 @@ body::-webkit-scrollbar {
 <div id="bio">
    <h2 style="text-transform:uppercase;color:#dfd2c3;">about</h2>
    <p>
-     My name is Christelle Haddad, I am a web developer with a passion for UI/UX Design and SEO. 
+       My name is Christelle Haddad, I am a <h1 style="visibility:hidden;">freelance web developer</h1>freelance web developer with a passion for UI/UX Design and SEO. 
        I help businesses reach their goals by building websites that engage and convert visitors into customers. 
        With my skills and experience in website design and development, I create beautiful user-centered interfaces for brands and individuals who want to 
        make a strong web presence and achieve their goals. 
@@ -408,14 +408,14 @@ body::-webkit-scrollbar {
     <img class="card-img-top" style="width:10%;" src="images/testi.png" alt="">
     <div class="card-body">
         <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">Hussein S.</h4>
-        <p class="card-text">"Christelle managed to redesign and build my Shopify store with amazing speed and quality. She also demonstrated a very good initiative in proposing ideas and great attention to details. Throughout the project, Christelle communicated professionally and effectively, and I would definitely recommend working with her."</p>
+        <p class="card-text">"Christelle managed to redesign and build my <h1 style="visibility:hidden;">shopify developer</h1>Shopify store with amazing speed and quality. She also demonstrated a very good initiative in proposing ideas and great attention to details. Throughout the project, Christelle communicated professionally and effectively, and I would definitely recommend working with her."</p>
     </div>
 </div>
 <div class="card">
     <img class="card-img-top" style="width:10%;" src="images/testi.png" alt="">
     <div class="card-body">
         <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">Maya A.</h4>
-        <p class="card-text">"I recently worked with Christelle on a website development from scratch and was impressed with her exceptional service and expertise. Christelle listened to my vision, offered creative ideas and made sure the final product exceeded my expectations. The new website is sleek, modern, and easy to navigate, optimized for search engines and mobile devices. She completed the project on time and was always responsive and accessible. I highly recommend Christelle for any website design and development."</p>
+        <p class="card-text">"I recently worked with Christelle on a <h1 style="visibility:hidden;">website development</h1>website development from scratch and was impressed with her exceptional service and expertise. Christelle listened to my vision, offered creative ideas and made sure the final product exceeded my expectations. The new website is sleek, modern, and easy to navigate, optimized for search engines and mobile devices. She completed the project on time and was always responsive and accessible. I highly recommend Christelle for any website design and development."</p>
     </div>
 </div>
 <div class="card">
