--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@ body::-webkit-scrollbar {
 
 <!-- HTML Meta Tags -->
 <title>Freelance Web Developer | Christelle Haddad</title>
-<meta name="description" content="Christelle is a design-minded web developer focused on building beautiful user-centered interfaces & experiences. Let's elevate your business! 🚀 ">
+<meta name="description" content="Christelle is a freelance web developer focused on building beautiful user-centered interfaces & experiences. Let's elevate your business! 🚀 ">
 <link rel="author" href="https://www.linkedin.com/in/christellehaddad/" /><meta name="author" content="Freelance web developer Christelle Haddad" />
-<meta name="keywords" content="freelance web designer, seo, developer, joomla developer, shopify developer, wordpress developer, freelance web designer portfolio, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
+<meta name="keywords" content="freelance web designer, freelance web developer, seo, developer, joomla developer, shopify developer, wordpress developer, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
 <link rel="icon" href="images/favicon.icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -178,7 +178,7 @@ body::-webkit-scrollbar {
 <meta property="og:url" content="https://christellehddd.com/">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Freelance Web Developer | Christelle Haddad">
-<meta property="og:description" content="Christelle is a design-minded web developer focused on building beautiful user-centered interfaces & experiences. Let's elevate your business! 🚀 ">
+<meta property="og:description" content="Christelle is a freelance web developer focused on building beautiful user-centered interfaces & experiences. Let's elevate your business! 🚀 ">
 <meta property="og:image" content="/meta.png">
 
 <!-- Twitter Meta Tags -->
@@ -186,7 +186,7 @@ body::-webkit-scrollbar {
 <meta property="twitter:domain" content="christellehddd.com">
 <meta property="twitter:url" content="htts://christellehddd.com/">
 <meta name="twitter:title" content="Christelle Haddad • Lebanon based Freelance Web Designer &amp; Developer">
-<meta name="twitter:description" content="Christelle is a design-minded web developer focused on building beautiful user-centered interfaces & experiences. Let's elevate your business! 🚀 ">
+<meta name="twitter:description" content="Christelle is a freelance web developer focused on building beautiful user-centered interfaces & experiences. Let's elevate your business! 🚀 ">
 <meta name="twitter:image" content="/images/meta.png">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
