--- a/index.html
+++ b/index.html
@@ -328,11 +328,11 @@ body::-webkit-scrollbar {
 <div id="bio">
    <h2 style="text-transform:uppercase;color:#dfd2c3;">about</h2>
    <p>
-       My name is Christelle Haddad, I am a <h1 style="visibility:hidden;">freelance web developer</h1>freelance web developer with a passion for UI/UX Design and SEO. 
+       My name is Christelle Haddad, I am a </p><h1 style="display:none;">freelance web developer</h1><p>freelance web developer with a passion for UI/UX Design and SEO. 
        I help businesses reach their goals by building websites that engage and convert visitors into customers. 
        With my skills and experience in website design and development, I create beautiful user-centered interfaces for brands and individuals who want to 
        make a strong web presence and achieve their goals. 
-       As a freelancer, I work with companies, start-ups, and individuals worldwide.
+    As a freelancer, I work with companies, start-ups, and individuals worldwide.</p>
      <center>
       <br><hr><marquee behavior="scroll" direction="left" scrollamount="10" class="marquee">
         Wordpress / Shopify  / Joomla  /  UI/UX Design  /  Webflow  /  Search Engine Optimization  /  Google Analytics  /  Google My Business  /  Google Sites  /  Email Automation  /   Web Management  /  Website Audit  / Website Optimization
@@ -408,14 +408,14 @@ body::-webkit-scrollbar {
     <img class="card-img-top" style="width:10%;" src="images/testi.png" alt="">
     <div class="card-body">
         <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">Hussein S.</h4>
-        <p class="card-text">"Christelle managed to redesign and build my <h1 style="visibility:hidden;">shopify developer</h1>Shopify store with amazing speed and quality. She also demonstrated a very good initiative in proposing ideas and great attention to details. Throughout the project, Christelle communicated professionally and effectively, and I would definitely recommend working with her."</p>
+        <p class="card-text">"Christelle managed to redesign and build my Shopify store with amazing speed and quality. She also demonstrated a very good initiative in proposing ideas and great attention to details. Throughout the project, Christelle communicated professionally and effectively, and I would definitely recommend working with her."</p>
     </div>
 </div>
 <div class="card">
     <img class="card-img-top" style="width:10%;" src="images/testi.png" alt="">
     <div class="card-body">
         <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">Maya A.</h4>
-        <p class="card-text">"I recently worked with Christelle on a <h1 style="visibility:hidden;">website development</h1>website development from scratch and was impressed with her exceptional service and expertise. Christelle listened to my vision, offered creative ideas and made sure the final product exceeded my expectations. The new website is sleek, modern, and easy to navigate, optimized for search engines and mobile devices. She completed the project on time and was always responsive and accessible. I highly recommend Christelle for any website design and development."</p>
+        <p class="card-text">"I recently worked with Christelle on a website development from scratch and was impressed with her exceptional service and expertise. Christelle listened to my vision, offered creative ideas and made sure the final product exceeded my expectations. The new website is sleek, modern, and easy to navigate, optimized for search engines and mobile devices. She completed the project on time and was always responsive and accessible. I highly recommend Christelle for any website design and development."</p>
     </div>
 </div>
 <div class="card">
