--- a/index.html
+++ b/index.html
@@ -328,11 +328,11 @@ body::-webkit-scrollbar {
 <div id="bio">
    <h2 style="text-transform:uppercase;color:#dfd2c3;">about</h2>
    <p>
-       My name is Christelle Haddad, I am a </p><h1 style="display:none;">freelance web developer</h1><p>freelance web developer with a passion for UI/UX Design and SEO. 
+       My name is Christelle Haddad, I am a freelance web developer with a passion for UI/UX Design and SEO. 
        I help businesses reach their goals by building websites that engage and convert visitors into customers. 
        With my skills and experience in website design and development, I create beautiful user-centered interfaces for brands and individuals who want to 
        make a strong web presence and achieve their goals. 
-    As a freelancer, I work with companies, start-ups, and individuals worldwide.</p>
+    As a freelancer, I work with companies, start-ups, and individuals worldwide.
      <center>
       <br><hr><marquee behavior="scroll" direction="left" scrollamount="10" class="marquee">
         Wordpress / Shopify  / Joomla  /  UI/UX Design  /  Webflow  /  Search Engine Optimization  /  Google Analytics  /  Google My Business  /  Google Sites  /  Email Automation  /   Web Management  /  Website Audit  / Website Optimization
