--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ body::-webkit-scrollbar {
     <h2 class="" style="text-align:center;color:#171717 !important;margin:auto;">Your website represents your business. Let me help you improve it. 💻 🚀    </h2>
   </div> 
 
- <div> 
+ <div style="text-align:center;"> 
   <a href="https://calendly.com/christellehddd"> <button class="pulse-grow-on-hover" style="color: #18161b; border: 1px solid #18161b;" > BOOK A CALL</button></a>
 </div>
 
