--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@ body::-webkit-scrollbar {
             </figure>
             <!-- <figure>  <img onclick="magnify($(this).attr('src'))" src="images/musicc.png" alt="Music player UX project"></a></figure>-->
             <figure>  
-                <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant%20(1)f.png" alt="Wordpress LevantLink Website Cyprus"></a>
+                <a href="https://www.agostostore.com/"> <img onclick="magnify($(this).attr('src'))" src="images/agosto.png" alt="Shopify Agosto Store Website UAE"></a>
                 <div  style="text-align:center;">
-                    <a href="https://www.levantlink.cy/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+                    <a href="https://www.agostostore.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
             </figure>
      <figure> 
@@ -298,11 +298,11 @@ body::-webkit-scrollbar {
                  <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW PROJECT ➜</button></a>
          </div>
             </figure>
-     <figure>    
-         <img onclick="magnify($(this).attr('src'))" src="images/googlesite-.png" alt="Google site design">
-         <div style="text-align:center;">
-             <a href="#"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
-        </div>
+     <figure>  
+                <a href="https://www.levantlink.cy/"> <img onclick="magnify($(this).attr('src'))" src="images/levant%20(1)f.png" alt="Wordpress LevantLink Website Cyprus"></a>
+                <div  style="text-align:center;">
+                    <a href="https://www.levantlink.cy/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+                </div>
             </figure>
      <figure>  
          <img onclick="magnify($(this).attr('src'))" src="images/ddf2.png" alt="DDF Project"> 
