--- a/index.html
+++ b/index.html
@@ -465,10 +465,10 @@ body::-webkit-scrollbar {
            <input type="business name" placeholder="business name" name="business name" required><br>
           <select name="service" required>
               <option value="service">service needed</option>
-           <option value="web design/development">web design/development</option>
-            <option value="seo">seo</option>
-            <option value="maintenance">web maintenance</option>
-           <option value="optimization">web optimization</option>
+           <option value="web design/development">website development</option>
+            <option value="maintenance">website maintenance</option>
+            <option value="seo">search engine optimization</option>
+           <option value="emarketing">email marketing</option>
                </select>
           
          <select name="type" required>
