--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ body::-webkit-scrollbar {
             </figure>
             <!-- <figure>  <img onclick="magnify($(this).attr('src'))" src="images/musicc.png" alt="Music player UX project"></a></figure>-->
             <figure>  
-                <a href="https://www.agostostore.com/"> <img onclick="magnify($(this).attr('src'))" src="images/agosto.png" alt="Shopify Agosto Store Website UAE"></a>
+                <a href="https://www.agostostore.com/"> <img onclick="magnify($(this).attr('src'))" src="images/agostoo.png" alt="Shopify Agosto Store Website UAE"></a>
                 <div  style="text-align:center;">
                     <a href="https://www.agostostore.com/"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
