--- a/index.html
+++ b/index.html
@@ -499,5 +499,8 @@ body::-webkit-scrollbar {
     ©2023 <a href="https://christellehddd.com/" style="color:#171717 !important;" >christellehddd</a>
 </div>
 <script src="index.js" type="text/javascript"></script>
+<!-- Start of HubSpot Embed Code -->
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/139513150.js"></script>
+<!-- End of HubSpot Embed Code -->
 </body>
 </html>
