--- a/index.html
+++ b/index.html
@@ -426,9 +426,8 @@ body::-webkit-scrollbar {
 <div class="card">
     <img class="card-img-top" style="width:10%;" src="images/testi.png" alt="">
     <div class="card-body">
-      <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">Kadi K.</h4>
-      <p class="card-text">"Christelle did a great job in a web design project. She delivered on time all the agreed deliverables. She is very talented in UX/UI and improving websites. I recommend working with her."
-   </p>
+      <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">Sylva Z.</h4>
+      <p class="card-text">"Christelle handled our brand's Shopify store perfectly, we are so happy with the results and service. Very supportive and nice. It was a pleasure working with her!" </p>
 </div>
 
 </div>
