--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ body::-webkit-scrollbar {
     <img class="card-img-top" style="width:10%;" src="images/testi.png" alt="">
     <div class="card-body">
         <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">Maya A.</h4>
-        <p class="card-text">"I recently worked with Christelle on a website development from scratch and was impressed with her exceptional service and expertise. Christelle listened to my vision, offered creative ideas and made sure the final product exceeded my expectations. The new website is sleek, modern, and easy to navigate, optimized for search engines and mobile devices. She completed the project on time and was always responsive and accessible. I highly recommend Christelle for any website design and development."</p>
+        <p class="card-text">"I recently worked with Christelle on a website development from scratch and was impressed with her exceptional service and expertise. Christelle listened to my vision, offered creative ideas and made sure the final product exceeded my expectations. I highly recommend working with her!"</p>
     </div>
 </div>
 <div class="card">
