--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ body::-webkit-scrollbar {
       <td>  
        <form action="https://getform.io/f/2ff73cfd-e3c4-4ec8-b0e8-042615c37b4b" method="POST" id="demo-form">
         <input type="text" placeholder="name" name="name" required>
-           <input type="number" placeholder="number" name="number">
+           <input type="text" placeholder="number" name="number">
         <input type="email" placeholder="email" name="email" required><br>
           <select name="service" required>
               <option value="service">service needed</option>
@@ -462,14 +462,14 @@ body::-webkit-scrollbar {
             <option value="seo">search engine optimization</option>
            <option value="emarketing">email marketing</option>
                </select>
-          
+          <!--
          <select name="type" required>
               <option value="type">type of website</option>
            <option value="informative">informative</option>
             <option value="ecommerce">ecommerce</option>
             <option value="portfolio">portfolio</option>
            <option value="landing">landing page</option>
-               </select>
+               </select>-->
         <textarea placeholder="message" required rows="5" name="describe your business in few sentences" required></textarea><br>
         <button
         data-sitekey="6LdQJ5kfAAAAALtXB9QIAxUn3wZ4wI16-ajCmrKM" 
