--- a/index.html
+++ b/index.html
@@ -328,14 +328,17 @@ body::-webkit-scrollbar {
 <div id="bio">
    <h2 style="text-transform:uppercase;color:#dfd2c3;">about</h2>
    <p>
-       My name is Christelle Haddad, I am a freelance web developer with a passion for UI/UX Design and SEO. 
+       My name is Christelle, I'm a freelance web developer from Lebanon. With a strong passion for creating user-centered websites 
+       and helping people establish a digital presence, I'm dedicated to delivering high-quality solutions tailored to their needs. 
+       Whether you are a company, a start-up, or an individual, I'm here to help you achieve your goals through effective web design and development.
        I help businesses reach their goals by building websites that engage and convert visitors into customers. 
        With my skills and experience in website design and development, I create beautiful user-centered interfaces for brands and individuals who want to 
        make a strong web presence and achieve their goals. 
-    As a freelancer, I work with companies, start-ups, and individuals worldwide.
+       
+    As a freelancer, I offer my services worldwide.
      <center>
       <br><hr><marquee behavior="scroll" direction="left" scrollamount="10" class="marquee">
-        Wordpress / Shopify  / Joomla  /  UI/UX Design  /  Webflow  /  Search Engine Optimization  /  Google Analytics  /  Google My Business  /  Google Sites  /  Email Automation  /   Web Management  /  Website Audit  / Website Optimization
+        Wordpress /  Webflow  /  Shopify  / Joomla /  UI/UX Design / Search Engine Optimization  /  Google Analytics  /  Google My Business  /  Google Sites  /  Email Automation  /   Web Management  /  Website Audit  / Website Optimization
    </marquee><hr><br><br> 
    <h2 style="text-transform:uppercase;color:#dfd2c3;text-align:center;    -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
@@ -447,7 +450,8 @@ body::-webkit-scrollbar {
 
 <div id="contact">
  <h2 style="text-transform:uppercase;">Contact</h2>
- 
+ <p>If you are ready to take your digital presence to the next level or have any inquiries, feel free to get in touch. I am available for freelance projects and collaborations worldwide.
+     Let's work together to create a website that truly reflects your brand and helps you succeed.</p></p>
  <table>
   <tr>  
       <td>  
