--- a/index.html
+++ b/index.html
@@ -451,8 +451,9 @@ body::-webkit-scrollbar {
 
 <div id="contact">
  <h2 style="text-transform:uppercase;">Contact</h2>
- <p>If you are ready to take your digital presence to the next level or have any inquiries, feel free to get in touch. I am available for freelance projects and collaborations worldwide.
-     Let's work together to create a website that truly reflects your brand and helps you succeed.</p></p>
+ <p>If you are ready to take your digital presence to the next level or have any inquiries, feel free to get in touch. 
+     I am available for freelance projects and collaborations worldwide.
+     Let's work together to create a website that truly reflects your brand and helps you succeed.</p>
  <table>
   <tr>  
       <td>  
