--- a/index.html
+++ b/index.html
@@ -368,23 +368,25 @@ body::-webkit-scrollbar {
     <img class="card-img-top" style="width:30%;" src="images/call.png" alt="first step is a discovery call">
     <div class="card-body">
         <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;"><span class="big_header" style="font-size:3em;">1</span>Discovery Call</h4>
-        <p class="card-text">We will start with a discovery call 
-        where I can learn more about your business and needs, so we achieve your goals.</br>
+        <p class="card-text">This is the initial consultation call during which I can gather more information about your business 
+            and specific requirements. This will allow us to work towards accomplishing your objectives successfully.</br>
     </div>
 </div>
 <div class="card">
     <img class="card-img-top" style="width:30%;" src="images/proposal.png" alt="second step is sending you a proposal">
     <div class="card-body">
         <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;"><span class="big_header" style="font-size:3em;">2</span>Proposal</h4>
-        <p class="card-text">I will send you a work plan based on what we discussed and a quote. We will work together to gather all the content needed; copy, images, etc. </p>
+        <p class="card-text">I will provide you with a comprehensive work plan and a detailed quotation.
+            We will collaborate closely to gather all the necessary content, including copy, images, and other essential elements.</p>
     </div>
 </div>
 <div class="card">
     <img class="card-img-top" style="width:30%;" src="images/work.png" alt="third step is all about the design and development">
     <div class="card-body">
       <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">  <span class="big_header" style="font-size:3em;">3</span>Design & Development</h4>
-      <p class="card-text">The work begins! I will keep you up to date throughout the whole process.
-       If at any point you have any questions, reach out and I will be happy to answer.
+      <p class="card-text">The work begins! 
+Let's get started on the project! I will ensure you are consistently updated throughout the entire process. If at any stage,
+          you have any concerns you can reach out reach out, and I'll be more than happy to give you the necessary answers.
    </p>
 </div>
 </div>
@@ -392,8 +394,9 @@ body::-webkit-scrollbar {
     <img class="card-img-top" style="width:30%;" src="images/delivery.png" alt="final step is the delivery and training">
     <div class="card-body">
        <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">  <span class="big_header" style="font-size:3em;">4</span>Project Delivery</h4>
-       <p class="card-text">Congrats, Your project is complete! But our relationship does not end there. 
-       I will answer any remaining questions and also provide any training/instructions that you may need.</p>
+       <p class="card-text">Congratulations! Your project has been successfully completed. 
+           However, our collaboration doesn't end here. I am available to address any remaining questions you may have and offer
+           any necessary training you might require to ensure a smooth transition and ongoing support.</p>
    </p>
 </div>
 </div>
