--- a/index.html
+++ b/index.html
@@ -454,9 +454,9 @@ Let's get started on the project! I will ensure you are consistently updated thr
 
 <div id="contact">
  <h2 style="text-transform:uppercase;">Contact</h2>
- <p>If you are ready to take your digital presence to the next level or have any inquiries, feel free to get in touch. 
+<center></center> <p>If you are ready to take your digital presence to the next level or have any inquiries, feel free to get in touch. <br>
      I am available for freelance projects and collaborations worldwide.
-     Let's work together to create a website that truly reflects your brand and helps you succeed.</p>
+     Let's work together to create a website that truly reflects your brand and helps you succeed.</p></center>
  <table>
   <tr>  
       <td>  
