--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@ body::-webkit-scrollbar {
 
 <!-- HTML Meta Tags -->
 <title>Freelance Web Developer | Christelle Haddad</title>
-<meta name="description" content="Christelle is a freelance web developer focused on building beautiful user-centered interfaces & experiences. Let's elevate your business! 🚀 ">
+<meta name="description" content="Looking for a skilled web developer in Lebanon? Christelle Haddad is your go-to expert for WordPress and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 ">
 <link rel="author" href="https://www.linkedin.com/in/christellehaddad/" /><meta name="author" content="Freelance web developer Christelle Haddad" />
-<meta name="keywords" content="freelance web designer, freelance web developer, seo, developer, joomla developer, shopify developer, wordpress developer, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
+<meta name="keywords" content="freelance web designer, freelance web developer in lebanon, webflow developer, seo, developer, joomla developer, shopify developer, wordpress developer, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
 <link rel="icon" href="images/favicon.icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -329,7 +329,7 @@ body::-webkit-scrollbar {
    <h2 style="text-transform:uppercase;color:#dfd2c3;">about</h2>
    <p>
        My name is Christelle, I'm a freelance web developer from Lebanon. 
-       
+       <br>
        With a strong passion for creating user-centered websites and helping people establish a digital presence, I'm dedicated to delivering high-quality solutions tailored to their needs. 
        Whether you are a company, a start-up, or an individual, I'm <b>here to help you achieve your goals</b> through effective web design and development.
       
@@ -395,8 +395,8 @@ Let's get started on the project! I will ensure you are consistently updated thr
     <div class="card-body">
        <h4 class="card-title" style="text-transform:uppercase;color:#dfd2c3;">  <span class="big_header" style="font-size:3em;">4</span>Project Delivery</h4>
        <p class="card-text">Congratulations! Your project has been successfully completed. 
-           However, our collaboration doesn't end here. I am available to address any remaining questions you may have and offer
-           any necessary training you might require to ensure a smooth transition and ongoing support.</p>
+           However, our collaboration doesn't end here. I will make sure you have the necessary training for maintaining the website
+           to ensure a smooth transition. I will also be available for ongoing support.</p>
    </p>
 </div>
 </div>
@@ -454,9 +454,9 @@ Let's get started on the project! I will ensure you are consistently updated thr
 
 <div id="contact">
  <h2 style="text-transform:uppercase;">Contact</h2>
-<center></center> <p>If you are ready to take your digital presence to the next level or have any inquiries, feel free to get in touch. <br>
-     I am available for freelance projects and collaborations worldwide.
-     Let's work together to create a website that truly reflects your brand and helps you succeed.</p></center>
+<div><center></center> <p>If you are ready to take your digital presence to the next level or have any inquiries,    <br>
+    feel free to get in touch. <br> I am available for freelance projects and collaborations worldwide.
+     Let's work together to create a website that truly reflects your brand and helps you succeed.</p></center></div>
  <table>
   <tr>  
       <td>  
