--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ body::-webkit-scrollbar {
 </style>
 
 <!-- HTML Meta Tags -->
-<title>Freelance Web Developer | Christelle Haddad</title>
+<title>Freelance Web Developer | Web Design and SEO Services</title>
 <meta name="description" content="Looking for a skilled web developer in Lebanon? Christelle Haddad is your go-to expert for WordPress and Webflow development. With extensive experience and a passion for creating stunning websites, Christelle can bring your digital vision to life. Boost your online presence and enhance user experience with cutting-edge designs and smooth functionality. Contact me today for all your web development needs.🚀 ">
 <link rel="author" href="https://www.linkedin.com/in/christellehaddad/" /><meta name="author" content="Freelance web developer Christelle Haddad" />
 <meta name="keywords" content="freelance web designer, freelance web developer in lebanon, webflow developer, seo, developer, joomla developer, shopify developer, wordpress developer, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
@@ -177,7 +177,7 @@ body::-webkit-scrollbar {
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://christellehddd.com/">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Freelance Web Developer | Christelle Haddad">
+<meta property="og:title" content="Freelance Web Developer | Web Design and SEO Services">
 <meta property="og:description" content="Christelle is a freelance web developer focused on building beautiful user-centered interfaces & experiences. Let's elevate your business! 🚀 ">
 <meta property="og:image" content="/meta.png">
 
@@ -185,7 +185,7 @@ body::-webkit-scrollbar {
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="christellehddd.com">
 <meta property="twitter:url" content="htts://christellehddd.com/">
-<meta name="twitter:title" content="Christelle Haddad • Lebanon based Freelance Web Designer &amp; Developer">
+<meta name="twitter:title" content="Freelance Web Developer  • Web Design and SEO Services">
 <meta name="twitter:description" content="Christelle is a freelance web developer focused on building beautiful user-centered interfaces & experiences. Let's elevate your business! 🚀 ">
 <meta name="twitter:image" content="/images/meta.png">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
