--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
  <h2 style="text-transform:uppercase;">Contact</h2>
 <div><center><p style="font-size: 1.67em;
     margin-top: 2em;">If you are ready to take your digital presence to the next level or have any inquiries,    <br>
-    feel free to get in touch. <br> I am available for freelance projects and collaborations worldwide.
+    feel free to get in touch. I am available for freelance projects and collaborations worldwide.<br>
      Let's work together to create a website that truly reflects your brand and helps you succeed.</p></center></div>
  <table>
   <tr>  
