--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
    document.getElementById("demo-form").submit();
 }
 </script>
-<!--
+
  <script>
     //for disabling right click use this as it is 
     document.addEventListener('contextmenu', event => event.preventDefault());
 </script>
--->
+
 
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -455,8 +455,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
 <div id="contact">
  <h2 style="text-transform:uppercase;">Contact</h2>
 <div><p style="font-size: 1.67em;
-    margin-top: 2em;">If you are ready to take your digital presence to the next level or have any inquiries,    <br>
-    feel free to get in touch. I am available for freelance projects and collaborations worldwide.<br>
+    margin-top: 2em;">If you are ready to take your digital presence to the next level or have any inquiries, feel free to get in touch. I am available for freelance projects and collaborations worldwide.<br>
      Let's work together to create a website that truly reflects your brand and helps you succeed.</p></div>
  <table>
   <tr>  
