--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
 <div id="contact">
  <h2 style="text-transform:uppercase;">Contact</h2>
 <div><p style="font-size: 1.67em;
-    margin-top: 2em;">If you are ready to take your digital presence to the next level or have any inquiries, feel free to get in touch. I am available for freelance projects and collaborations worldwide.<br>
+    margin-top: 2em;">If you are ready to take your digital presence to the next level or have any inquiries, feel free to get in touch. I am available for freelance projects and collaborations worldwide.
      Let's work together to create a website that truly reflects your brand and helps you succeed.</p></div>
  <table>
   <tr>  
